k8s/openrefine/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrefine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openrefine
  template:
    metadata:
      labels:
        app: openrefine
    spec:
      containers:
        - name: app
          image: easypi/openrefine:3.9.3 # {"$imagepolicy": "nde:openrefine"}
          ports:
            - containerPort: 80
