k8s/openrefine/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openrefine
spec:
  ports:
    - port: 80
      targetPort: 3333
  selector:
    app: openrefine
